--- a/src/index.html
+++ b/src/index.html
@@ -6,8 +6,27 @@
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="stylesheet" href="assets/css/styles.css">
 </head>
 <body>
-  <app-root></app-root>
+
+<div class="container">
+
+  <header>
+    <div>
+      <strong><u>BUS</u>CA MARVEL</strong> TESTE FRONT-END
+    </div>
+    <div class="header-author">ANDREY PEREIRA</div>
+  </header>
+
+  <main>
+    <app-root></app-root>
+  </main>
+
+  <footer>
+
+  </footer>
+</div>
+
 </body>
 </html>
