Layout adjustments 00:20 - 14/01/2022 - Andrey Pereira

--- a/src/index.html
+++ b/src/index.html
@@ -13,10 +13,11 @@
 <div class="container">
 
   <header>
-    <div>
-      <strong><u>BUS</u>CA MARVEL</strong> TESTE FRONT-END
+    <div class="brand-name">
+      <strong>BUSCA MARVEL</strong> TESTE FRONT-END
+      <hr class="hr-1">
     </div>
-    <div class="header-author">ANDREY PEREIRA</div>
+    <div class="nav-author">ANDREY PEREIRA</div>
   </header>
 
   <main>
@@ -24,7 +25,6 @@
   </main>
 
   <footer>
-
   </footer>
 </div>
 
